fix dark mode in theme.css

--- a/assets/css/theme.css
+++ b/assets/css/theme.css
@@ -51,13 +51,13 @@
         font-family: 'Poppins', sans-serif !important;
     }
     h1 {
-      @apply max-w-2xl mb-4 text-4xl tracking-tight font-extrabold text-secondary dark:text-white;
+      @apply max-w-2xl mb-4 text-4xl tracking-tight font-extrabold text-secondary;
     }
     h2 {
-      @apply mb-4 text-4xl tracking-tight font-extrabold text-secondary dark:text-white;
+      @apply mb-4 text-4xl tracking-tight font-extrabold text-secondary;
     }
     h3 {
-      @apply mb-2 text-lg font-bold text-secondary dark:text-white;
+      @apply mb-2 text-lg font-bold text-secondary;
     }
 }
 
